<resources>
    <string name="app_name">Meals</string>

    <string name="plan_prompt">Select your meal plan:</string>
    <string-array name="plans_array">
        <item>Freedom First [$1900]</item>
        <item>Freedom Rings [$2200]</item>
        <item>Other         [input]</item>
    </string-array>

    <string name="starting_balance_prompt">Starting Balance:</string>
    <string name="starting_balance_hint">Starting Balance</string>

    <string name="current_balance_prompt">Current Balance:</string>
    <string name="current_balance_hint">Current Balance</string>

    <string name="end_date_prompt">Last Day of Plan:</string>
    <string name="last_day_hint">Last Day of Plan</string>

    <string name="submit_button">Submit</string>

    <string name="selected_date">(Selected Date)</string>

    <string name="reset_date_action">Reset Date</string>
    <string name="title_activity_display_message">
        Amount to Spend Daily
    </string>

    <string name="title_calendar_activity">
        Select Last Day to Spend Funds
    </string>

    <!-- Display Message string values. -->
    <string name="formatted_dollars" formatted="false">$%.2f</string>
    <string name="formatted_percent" formatted="false">%.2f%%</string>
    <string name="formatted_time" formatted="false">
        %d days, %02dh:%02dm:%02ds
    </string>
    <string name="daily_balance_text">Average daily balance:</string>
    <string name="weekly_balance_text">Remaining weekly balance:</string>
    <string name="monthly_balance_text">Remaining monthly balance:</string>
    <string name="percent_spent">Percentage spent:</string>
    <string name="time_remaining">Time remaining in period:</string>
    <string name="amount_spent">Amount spent:</string>

    <!-- About Menu string values. -->
    <string name="title_activity_about">About</string>
    <string name="about_text">
       <![CDATA[
        <h3>About:</h3>
        Meals is an useful yet simple meal budgeting tool. After providing a
        starting and current balance, and a end date for the budget period,
        Meals determine a daily allowance. If you spend the recommended amount
        per day you will be able to spend all of your budget. Also provided is
        an estimate for the remaining fund this week and month. Allowing you to
        easily purchase food for a longer period without the worry of going
        over budget.<br/>
        <h3>Credits:</h3>
        Created by Zachary Ferguson
        (<a href = "http://zfergus.me">zfergus.me</a>)<br/>
        Comments/Suggestions:
        <a href="mailto:zy.fergus@gmail.com?Subject=Meals%20App">
            zy.fergus@gmail.com
        </a>
        ]]>
    </string>
</resources>
